--- a/plugins/roles/app/views/roles/edit.rhtml
+++ b/plugins/roles/app/views/roles/edit.rhtml
@@ -1,1 +1,9 @@
-<%= render :partial => "role_edit", :locals => { :permissions => @permissions, :role => @role } %>
+<% content_for :before_script do %>
+  <% javascript_tag do %>
+    $(document).ready(function(){
+      addTabsNavigation(".tab", "span");
+      $(".tab").tabs();
+    });
+  <% end %>
+<% end %>
+<%= render :partial => "role_edit", :locals => { :permissions => @permissions, :role => @role, :users => @users } %>
