--- a/webclient/public/stylesheets/style.css
+++ b/webclient/public/stylesheets/style.css
@@ -761,15 +761,17 @@ tr.even {
   -webkit-border-radius: 5px;
   -khtml-border-radius: 5px;
   border-radius: 5px;
-
+  padding: 0 0.5em;
   margin: 0.5em 1em 0.5em;
+}
+
+.list-fieldset, .list-fieldset-header {
+  overflow: auto;
 }
 
 .list-fieldset-header,
 .ui-accordion .list-fieldset-header.ui-accordion-header {
   font-weight: bold !important;
-  margin-bottom: 5px;
-  margin-top: 4px;
 }
 
 .list-fieldset select {
