roles: use a better performing solution to display containers full of floats

--- a/plugins/roles/app/views/roles/index.rhtml
+++ b/plugins/roles/app/views/roles/index.rhtml
@@ -146,6 +146,7 @@
                                          "1" ) %>
                     </span>
                   <% end %>
+                  <div style="clear:both"></div>
                 </div>
                 <div class="permissions-group-content">
                   <% permissions.each do |permission| %>
@@ -160,6 +161,7 @@
                       <% end %>
                     </div>
                   <% end %>
+                  <div style="clear:both"></div>
                 </div>
               </div>
             <% end %>
