users: use partials for new/edit forms

--- a/plugins/users/app/views/users/new.html.erb
+++ b/plugins/users/app/views/users/new.html.erb
@@ -173,100 +173,8 @@ function def_group_validation(which){ return true; }
 <% form_for :user, :url => { :action => "create"}, :html => { :id => "form_", :autocomplete => :off, :onsubmit => "form_handler('')",}  do |f| %>
   <%= f.error_messages %>
 
-  <div class="fieldset-group">
+<%= render :partial => "user_edit", :locals =>{ :f => f, :disabled => disabled, :user => @user, :new => true } %>
 
-    <fieldset id="tab_login">
-      <legend><span><%= _("Login Settings") %></span></legend>
-	<table>
-	<tr><td>
-          <div class="label"><%=_("Full Name")%></div>
-	</td><td>
-          <%= f.text_field :cn , :disabled => disabled, :onblur => "propose_login(this.parentNode.parentNode.parentNode.parentNode.parentNode);" %>
-	</td></tr>
-
-	<tr><td>
-          <div class="label"><%=_("Login Name")%></div>
-	</td><td>
-          <%= f.text_field :uid, :disabled => disabled, :onblur => "$('#form_').validate().element('#user_uid') && propose_home(this.parentNode.parentNode.parentNode.parentNode.parentNode);", :class => "required" %>
-          <%= f.hidden_field :id %>
-	</td></tr>
-
-	<tr><td>
-          <div class="label"><%=_("Password")%></div>
-	</td><td colspan=2 rowspan=2>
-          <%= f.password_field :user_password, :onkeyup => "$('#form_').validate().element('#user_user_password');", :disabled => disabled, :class => "required" %>
-	</td></tr>
-	<tr><td>&nbsp;</td></tr>
-
-	<tr><td>
-          <div class="label"><%=_("Confirm Password")%></div>
-	</td><td>
-          <%= f.password_field :user_password2, :disabled => disabled, :equalTo => "#user_user_password", :onkeyup => "$('#form_').validate().element('#user_user_password2');" %>
-        <!-- this is a pre-generated placeholder for the validation messages -->
-        <div class="label" for="administrator_confirm_password" generated="true" class="error"></div>
-	</td></tr>
-	</table>
-    </fieldset>
-
-    <fieldset id="tab_groups">
-      <legend><span><%=_("Groups")%></span></legend>
-	<table border=0>
-	<tr><td rowspan=2>
-            <div class="label"><%=_("Groups")%></div>
-	</td><td>
-            <%= f.text_field :grp_string, :disabled => disabled, :onkeyup => "groups_validation(this);" %>
-	</td><td rowspan=2>
-	<% if @permissions[:groupsget] == true %>
-            <a href="#" class="button" onClick="select_groups_open('new');return false;"><%= _("Manage Groups") %></a>
-        <% end %>
-	<td></tr>
-
-	<tr><td>
-            <label class="label error" id="groups-error" ></label>
-	<td></tr>
-
-	<tr><td rowspan=2>
-            <div class="label"><%=_("Default Group")%></div>
-	</td><td>
-            <%= f.text_field :groupname, :disabled => disabled, :onkeyup => "def_group_validation(this);" %>
-	</td><td rowspan=2>
-	<% if @permissions[:groupsget] == true %>
-            <a href="#" class="button" onClick="select_default_group_open('new');return false;"><%= _("Select Default Group") %></a>
-        <% end %>
-	<td></tr>
-
-	<tr><td>
-            <label class="label error" id="def-group-error" ></label>
-	<td></tr>
-
-	</table>
-    </fieldset>
-
-    <fieldset id="tab_advanced">
-      <legend><span><%= _("Advanced") %></span></legend>
-	<table>
-	<tr><td>
-            <div class="label"><%=_("Home Directory")%></div>
-	</td><td>
-            <%= f.text_field :home_directory, :disabled => disabled %>
-	<td></tr>
-
-	<tr><td>
-            <div class="label"><%=_("Login Shell")%></div>
-	</td><td>
-            <%= f.text_field :login_shell, :disabled => disabled %>
-	<td></tr>
-
-	<tr><td>
-            <div class="label"><%=_("UID Number")%></div>
-	</td><td>
-            <%= f.text_field :uid_number, :disabled => disabled, :min => 1000, :class => "number", :onkeyup => "$('#form_').validate().element('#user_uid_number');"  %>
-        <div class="label" id="uid-error" class="error"></div>
-	<td></tr>
-	</table>
-    </fieldset>
-
-  </div>
   <div class="nav-buttons">
     <div id="progress_" style="display: none; margin-bottom: 10px"><img src="/images/working.gif" alt="Working"/><span style="vertical-align: 50%; margin-left: 5px">...Wait...</span></div>
     <%= submit_tag _("Save"), :onclick=>"return new_user_validation(this);" %>
