--- a/plugins/users/app/views/users/index.html.erb
+++ b/plugins/users/app/views/users/index.html.erb
@@ -182,97 +182,8 @@ function def_group_validation(which){ return true; }
      <% form_for(user, :url => { :action => "update" }, :html => { :method => :put, :id => "form_"+user.uid, :onsubmit => "form_handler('#{user.uid}')", :autocomplete => :off } ) do |f| %>
       <%= f.error_messages %>
 
-      <div class="fieldset-group tabs_<%= user.uid %>">
+<%= render :partial => "user_edit", :locals =>{ :f => f, :disabled => disabled, :user => user, :new => false } %>
 
-      <fieldset id="tab_login_<%= user.uid %>">
-       <legend><span><%= _("Login Settings") %></span></legend>
-       <table border=0>
-	<tr><td>
-          <div class="label"><%=_("Full Name")%></div>
-	</td><td colspan=2>
-          <%= f.text_field :cn , :disabled => disabled, :onblur => "propose_login(this.parentNode.parentNode);" %>
-	</td></tr>
-
-	<tr><td>
-          <div class="label"><%=_("Login Name")%></div>
-	</td><td colspan=2>
-          <%= f.text_field :uid, :disabled => disabled, :onblur => "$('#form_"+user.uid+"').validate().element('#user_uid');", :class => "required" %>
-          <%= f.hidden_field :id %>
-	</td></tr>
-
-	<tr><td>
-          <div class="label"><%=_("Password")%></div>
-	</td><td colspan=2 rowspan=2>
-          <%= f.password_field :user_password, :onkeyup => "$('#form_"+user.uid+"').validate().element('#user_user_password');", :disabled => disabled, :class => "user-password" %>
-	</td></tr>
-	<tr><td>&nbsp;</td></tr>
-
-	<tr><td>
-          <div class="label"><%=_("Confirm Password")%></div>
-	</td><td colspan=2>
-          <%= f.password_field :user_password2, :disabled => disabled, :equalTo => "#form_"+user.uid+" #user_user_password", :onkeyup => "$('#form_"+user.uid+"').validate().element('#form_"+user.uid+" #user_user_password2');" %>
-	  <label for="user_user_password2" generated="true" class="error"></label>
-	</td></tr>
-      </table>
-     </fieldset>
-
-      <fieldset id="tab_groups_<%= user.uid %>">
-      <legend><span><%=_("Groups")%></span></legend>
-      <table>
-	<tr><td rowspan=2>
-            <div class="label"><%=_("Groups")%></div>
-	</td><td>
-            <%= f.text_field :grp_string, :disabled => disabled, :onkeyup => "groups_validation(this);", :class => "grp-string" %>
-	</td><td rowspan=2>
-	<% if @permissions[:groupsget] == true %>
-            <a href="#" class="button" onClick="select_groups_open('<%= user.uid%>');return false;"><%= _("Manage Groups") %></a>
-	<% end %>
-	</td></tr>
-
-	<tr><td>
-            <label id="groups-error" class="error">error</label>
-	</td></tr>
-
-	<tr><td rowspan=2>
-            <div class="label"><%=_("Default Group")%></div>
-	</td><td>
-            <%= f.text_field :groupname, :disabled => disabled, :class => "groupname", :onkeyup => "def_group_validation(this);" %>
-	</td><td rowspan=2>
-	<% if @permissions[:groupsget] == true %>
-            <%= link_to _("Select Default Group"), {}, :href => "#", :onClick => "select_default_group_open('"+user.uid.to_s+"');return false;", :class => "button" %>
-	<% end %>
-	</td></tr>
-
-	<tr><td>
-            <label id="def-group-error" class="error">error</label>
-	</td></tr>
-       </table>
-      </fieldset>
-
-      <fieldset id="tab_advanced_<%= user.uid %>">
-      <legend><span><%= _("Advanced") %></span></legend>
-      <table>
-	<tr><td>
-            <div class="label"><%=_("Home Directory")%></div>
-	</td><td colspan=2>
-            <%= f.text_field :home_directory, :disabled => disabled %>
-	</td></tr>
-
-	<tr><td>
-            <div class="label"><%=_("Login Shell")%></div>
-	</td><td colspan=2>
-            <%= f.text_field :login_shell, :disabled => disabled %>
-	</td></tr>
-
-	<tr><td>
-            <div class="label"><%=_("UID Number")%></div>
-	</td><td colspan=2>
-            <%= f.text_field :uid_number, :disabled => disabled, :min => 1000, :class => "number", :onkeyup => "$('#form_"+user.uid+"').validate().element('#user_uid_number');"  %>
-            <label id="uid-error" class="error"></label>
-	</td></tr>
-       </table>
-      </fieldset>
-</div>
      <div class="nav-buttons">
     <div id="progress_<%= user.uid -%>" style="display: none; margin-bottom: 10px"><img src="/images/working.gif" alt="Working"/><span style="vertical-align: 50%; margin-left: 5px">...Wait...</span></div>
        <%= submit_tag _("Save"), :onclick=>"return edit_user_validation(this, '"+user.uid+"');"  %>
