--- a/plugins/users/app/views/users/new.html.erb
+++ b/plugins/users/app/views/users/new.html.erb
@@ -177,7 +177,7 @@ function def_group_validation(which){ return true; }
 
   <div class="nav-buttons">
     <div id="progress_" style="display: none; margin-bottom: 10px"><img src="/images/working.gif" alt="Working"/><span style="vertical-align: 50%; margin-left: 5px">...Wait...</span></div>
-    <%= submit_tag _("Save"), :onclick=>"return new_user_validation(this);" %>
+    <%= submit_tag _("Save"), :onclick=>"return user_validation(this,'');" %>
     <%= form_str_spacer %>
     <%= form_cancel_button :action => :index%>
   </div>
