Fixing Tidy warnings on the title page
<a> cannot contain <div>
- use <br> when break is needed
- use <span> elsewhere
-- except then it complains about an empty span -> add &nbsp;

--- a/plugins/software/app/views/patch_updates/_patch_summary.html.erb
+++ b/plugins/software/app/views/patch_updates/_patch_summary.html.erb
@@ -49,11 +49,11 @@
     <% label = [] %>
     <% link_to "patch_updates" do %>
       <% if patch[:security]+patch[:important] > 0 %>
-        <div class="status-icon error"></div>
+        <span class="status-icon error">&nbsp;</span>
       <% elsif patch[:optional] > 0%>
-        <div class="status-icon warning"></div>
+        <span class="status-icon warning">&nbsp;</span>
       <% else %>
-        <div class="status-icon ok"></div>
+        <span class="status-icon ok">&nbsp;</span>
       <% end %>
 
       <% if patch[:security] > 0 %>
